test on forked FLASH codebase due to access issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ before_install:
   # FFB-MINI app
   - git clone "https://github.com/mbdevpl/ffb-mini" "../ffb-mini"
   # FLASH 5 app
-  - git clone "https://github.com/ECP-Astro/FLASH5.git" "../flash5"
+  - git clone "https://github.com/mbdevpl/FLASH5.git" "../flash5"
   # miranda_io app
   - git clone "https://github.com/mbdevpl/miranda_io" "../miranda_io"
 
